src/main/java/com/revolvingmadness/testing/language/errors/SyntaxError.java
package com.revolvingmadness.testing.language.errors;

public class SyntaxError extends RuntimeException {
    public SyntaxError(String message) {
        super(message);
    }
}
